# training-dynamics-workbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  Claude.md  DOMAIN_MODEL.md  FourierEvaluation.py  ModuloAdditionRefactored.py  ModuloAdditionSpecification.py  PROJECT.md  README.md  analysis_notebook.py  main.py  pyproject.toml  visualization_notebook.py
.claude/: settings.json
analysis/: __init__.py  artifact_loader.py  pipeline.py  protocols.py
apps/dashboard/: README.md  pyproject.toml
apps/dashboard/src/dashboard/: app.py  layout.py  state.py  utils.py  version.py
apps/dashboard/src/dashboard/components/: leftnav.py  sitenav.py  variant_context_bar.py
apps/dashboard/src/dashboard/pages/: _analysis_page_template.py  activation_dmd.py  analysis_run.py  centroid_dmd.py  checkpoint_schedule.py  dimensionality_dynamics.py  geometry_weights.py  initialization_sweep.py  intervention_check.py  neuron_group.py  parameter_dmd.py  repr_geometry.py  training.py  variant_table.py  visualization_archive.py
apps/dashboard/tests/: test_dashboard.py
dashboard/: __init__.py  app.py  layout.py  state.py  utils.py  version.py
dashboard_temp/: app.py  default.py  layout.py  state.py
dashboard_v2/: __init__.py  __main__.py  app.py  callbacks.py  layout.py  navigation.py  state.py  version.py
docs/: DOMAIN_MODEL.md  PROJECT.md  analysis_atlas.md
families/: __init__.py  json_family.py  protocols.py  registry.py  variant.py
fieldnotes/: .gitignore
notebooks/: batch_repr_geometry.py  compute_variant_metrics.py  create_animation.py  early_gradient_analysis.py  grokking_lemniscate.ipynb  group_trajectory_overlay.ipynb  model_checkpoints.py  mseed_gradient_comparison.py  neuron_fourier_poc.py  neuron_freq_trajectory.py  neuron_group_pca_scatter.ipynb  parameter_space_pca.ipynb  parameter_trajectory_pca.ipynb  pc3_dynamics.ipynb  pca_plots.py  pca_time_series.py  phase_diagram.ipynb  regression_intragroup_manifold.ipynb  residue_class_graduation.ipynb  run_analysis.py  run_analysis_regression.py  scratch_pad.py  thrasher_attention_profile.ipynb  training_data_distribution.py  viability_certificate_calibration.py  view_centroid_dmd.ipynb  view_frequency_quality.ipynb  view_neuron_freq_distribution.ipynb  weight_geometry.ipynb  weight_trajectory_divergence.py
notes/: analysis_ideas.md  findings.md  findings_archive.md  platform_ideas.md  thoughts.md  variant_analysis_p101_seed999.md
origins/: ModuloAdditionRefactored.py  ModuloAdditionSpecification.py
regression/: reference_checksums.json  reference_checksums_req112.json
requirements/: README.md  REQ_001_configurable_checkpoint_epochs.md  REQ_002_safetensors_persistence.md  REQ_003_analysis_pipeline_architecture.md  REQ_004_dominant_embedding_frequencies_viz.md  REQ_005_activation_heatmaps_viz.md  REQ_006_neuron_frequency_clusters_viz.md  REQ_007_gradio_dashboard_training_controls.md  REQ_008_analysis_visualization_display.md  REQ_009_loss_curves_epoch_indicator.md  REQ_010_application_versioning.md  Roadmap_Analysis_rough.md  Roadmap_rough.md
scripts/: create_animation.py  export_fieldnotes_figures.py  fill_checkpoints.py  generate_regression_checksums.py  migrate_dseed.py  precompute_ideal_sets.py  refresh_variant_summaries.py  run_analysis.py  run_analysis_regression.py  run_regression_check.py  train_2layer_mlp.py  train_learned_emb_mlp.py  viability_certificate_calibration.py
tdw/: __init__.py  config.py  loaded_family.py
tests/: test_analysis_library.py  test_analysis_pipeline.py  test_artifact_loader.py  test_attention_fourier.py  test_attention_freq_analyzer.py  test_attention_freq_renderers.py  test_attention_patterns_analyzer.py  test_attention_patterns_renderers.py  test_band_concentration.py  test_centroid_dmd.py  test_checkpoint_and_persistence.py  test_clustering_primitives.py  test_coarseness_analyzer.py  test_comparison.py  test_config.py  test_cross_epoch_analyzers.py  test_cross_variant_comparison.py  test_dashboard.py  test_data_compatibility.py  (+41 more)
(+441 files in other folders)
