[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tdw", "families", "analysis", "visualization", "dashboard", "dashboard_v2"]

[project]
name = "training-dynamics-workbench"
version = "0.1.0"
description = "Mechanistic interpretability workbench for analyzing training dynamics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "gradio>=4.0.0",
    "ipykernel>=7.1.0",
    "kaleido>=0.2.1",
    "nbformat>=5.10.4",
    "numpy>=1.26",
    "Pillow>=10.0",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "transformer-lens>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.350",
]

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "notebooks/*"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length handled separately

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
ignore = [
    "notebooks"
]
