[project]
name = "miscope-workspace"
version = "0.0.0"
description = "MIScope monorepo workspace root (not published)"
requires-python = ">=3.11"
dependencies = [
    "miscope",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright==1.1.408",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/miscope"]

[tool.uv.sources]
miscope = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "*.ipynb",
    "notebooks/*"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length handled separately

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
ignore = [
    "*.ipynb",
    "notebooks"
]
