[project]
name = "miscope-workspace"
version = "0.0.0"
description = "MIScope monorepo workspace root (not published)"
requires-python = ">=3.11"
dependencies = [
    "miscope",
    "dashboard",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright==1.1.408",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/miscope", "apps/dashboard"]

[tool.uv.sources]
miscope = { workspace = true }
dashboard = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "packages/miscope/tests",
    "apps/dashboard/tests",
    "tests/integration",
]
# Use importlib mode so multiple `tests` packages across the workspace
# don't collide on import.
addopts = "--import-mode=importlib"
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "*.ipynb",
    "apps/research/sketches/*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Line length handled separately

[tool.ruff.lint.isort]
known-first-party = ["miscope", "dashboard"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
ignore = [
    "*.ipynb",
    "apps/research/sketches",
]
