[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dashboard"
version = "0.8.3"
description = "MIScope local interactive dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "miscope",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
]

[tool.uv.sources]
miscope = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
